Добавлены свои ошибки, добавлен RestControllerAdvice